--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html style="background-color:pink;">
+  <head>
+    <title>Skateboard</title>
+  </head>
+  <h1 style="color:red; text-align: center;">Shayaan's webpage</h1>
+  <div style="text-align: center;">
+    <a href="https://images.unsplash.com/photo-1555412654-72a95a495858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=130&h=231&q=90" target="_blank">
+      <img src="https://images.unsplash.com/photo-1555412654-72a95a495858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=130&h=231&q=90"></img>
+    </a>
+    <a href="https://images.unsplash.com/photo-1591311337241-cecfd26f1da1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=130&q=" target="_blank">
+      <img src="https://images.unsplash.com/photo-1591311337241-cecfd26f1da1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=130&q="></img>
+    </a>
+  </div>
+  <div style="text-align: center;">
+    <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Globe_Skateboard.jpg/260px-Globe_Skateboard.jpg" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Globe_Skateboard.jpg/260px-Globe_Skateboard.jpg" width:"130px"></img>
+    </a>
+  </div>
+  <div style="text-align: center; padding-top: 30px">
+    <a href="https://www.unsplash.com" target = "_blank">
+      <button style="color:white; background-color:blue;">Enter</button>
+      
+    </a>
+  </div>
+</html>
